# ebts-mime

./: CMakeLists.txt  README.md  ebts-mime.spec  ebts.c  ebts.h  ebts.i  fswatch.c  fswatch.h  main.c
